--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home-Nile University</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -18,7 +19,7 @@
 <STYLE>A {text-decoration: none;} </STYLE>
 <body>
 	
-	<div class="header" id="myHeader" style="width: 100%;" > 
+	<div class="header" id="myHeader" style="width: 100%; box-shadow: ;" > 
 		
 	
 <div class="navbar"style="width: 100%;" >
